# psoplot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-docs.yml  deploy-docs.yml  release.yml
docs/source/: colormaps.rst  conf.py  index.rst
docs/source/examples/: example-aanda.rst  example-aas.rst  index.rst
examples/colormaps/: GALLERY_HEADER.rst  plot_cmaps.py
examples/styles/: GALLERY_HEADER.rst  plot_aanda_style.py  plot_aas_style.py
src/psoplot/: __about__.py  __init__.py  __utils__.py  _subplot.py  aanda_plot.py  aanda_publication.mplstyle  aas_plot.py  aas_publication.mplstyle  cmaps.py  gridplot.py  publication.mplstyle  sliceplot.py
src/psoplot/cli/: make_movie.py
