[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psoplot"
dynamic = ["version"]
description = 'PSO Plotting Utils'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Alexander Holas", email = "alex.holas@gmx.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.21.0",
  "matplotlib>=3.6.0",
]

[project.urls]
"Homepage" = "https://github.com/astro-pso/psoplot"
"Bug Tracker" = "https://github.com/astro-pso/psoplot/issues"

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/psoplot/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/psoplot tests}"

[tool.coverage.run]
source_pkgs = ["psoplot", "tests"]
branch = true
parallel = true
omit = [
  "src/psoplot/__about__.py",
]

[tool.coverage.paths]
psoplot = ["src/psoplot", "*/psoplot/src/psoplot"]
tests = ["tests", "*/psoplot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "./github",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/psoplot"]

[project.scripts]
make-movie = "psoplot.cli.make_movie:cli"
